--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
   "module": "lib/es/index.js",
   "types": "typings/index.d.ts",
   "peerDependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react": "^16.3.2 || ^17",
+    "react-dom": "^16.3.2 || ^17"
   },
   "repository": {
     "type": "git",
