--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@titicaca/react-intersection-observer",
   "description": "React component for the Intersection Observer API",
-  "version": "1.5.1-beta.0",
+  "version": "1.6.0",
   "author": "Luis Merino <mail@luismerino.name>",
   "engines": {
     "node": ">=10.18.1"
